# json-schema-uploads-to-glue

./: .gitignore  glue_job.py  json_data_and_schema_generator.ipynb  persons-1.config.yml  persons-1.json  persons-1.schema.json  persons-2.config.yml  persons-2.json  pyproject.toml
glue_scripts/schema_upload/: script.py
json_schema_to_glue/: glue_job.py  glue_table_creator.py  json_schema_parser.py  schema_parser.py
json_schema_to_glue/glue/: glue_table_creator.py  processed.py  raw.py  staging.py  table_manager.py  utils.py
json_schema_to_glue/schema/: ref_resolver.py  utils.py
jupyter/: json_data_and_schema_generator.ipynb  person-3.jsonl  persons-2.json  persons-2.schema.json  requirements.txt
